# focus.lang

./: .gitignore  Cargo.toml  README.md  build-playground.sh  build-wasm.sh
docs/: index.html
docs/app/: version.json
docs/app/immutable/assets/: 2.PDjoHv3l.css  _page.Vc4vJf4e.css  focus_lang_bg.1u-x4jMS.wasm  focus_lang_bg.2rBaYDrd.wasm  focus_lang_bg.9igXXZnu.wasm  focus_lang_bg.CXyIuNWz.wasm  focus_lang_bg.F9YSRbBG.wasm  focus_lang_bg.I-DYGR1o.wasm  focus_lang_bg.xXJ7J89k.wasm
docs/app/immutable/chunks/: index.61k42XH5.js  index.h4cHRKzr.js  index.o49D9UaD.js  index.oOAWoRT2.js  paths.-nX7b_SP.js  paths.2DGn1Xy3.js  paths.4yHiVIUI.js  paths.Byqv9D-O.js  paths.OtId6lHj.js  paths.U7JucMZD.js  paths.WeX6Jq83.js  paths.XJLeQ3yv.js  paths.s0XI3mJ_.js  scheduler.9uZ4zMA_.js  scheduler.COgoNscs.js  scheduler.JXPv2Ks7.js  (+10 more)
docs/docs/: version.json
docs/examples/: fibonacci.fl
docs/prism/: prism.css
docs/tutorials/: 01-intro.fl  01-intro.md  02-variables.fl  02-variables.md  03-functions.md  04-functions.fl
playground/: package-lock.json  package.json  svelte.config.js
playground/src/: app.html
playground/src/lib/: focus.js  menu.ts
playground/src/routes/: +page.svelte  +page.ts
playground/static/: 01-intro.md
playground/static/prism/: prism.js
playground/static/tutorials/: 01-intro.fl  01-intro.md  02-variables.md  04-blocks.md
src/: ast.rs  compiler.rs  compiler_error.rs  gc.rs  lexer.rs  lib.rs  object.rs  op.rs  parser.rs  state.rs  stdlib.rs  token.rs  value.rs  vm.rs
src/stdlib/: fmt.rs  http.rs  io.rs  iter.rs  mod.rs  parse.rs  string.rs
(+63 files in other folders)
