[package]
name = "focus-lang"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tracing = "0.1.37"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.89"
js-sys = "0.3.66"
web-sys = { version = "0.3.66", features = [
    "console",
    "Window",
    "Event",
    "CustomEvent",
    "CustomEventInit",
    "EventTarget",
] }
